; ModuleID = '/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_flush_reload.c'
source_filename = "/home/carl/AnghaBench/meltdown/libkdump/extr_libkdump.c_flush_reload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@config = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @flush_reload to i8*)], section "llvm.metadata"

; Function Attrs: alwaysinline nounwind uwtable
define internal i32 @flush_reload(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %6 = call i64 (...) @rdtsc()
  store i64 %6, i64* %4, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = call i32 @maccess(i8* %7)
  %9 = call i64 (...) @rdtsc()
  store i64 %9, i64* %5, align 8
  %10 = load i8*, i8** %3, align 8
  %11 = call i32 @flush(i8* %10)
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %4, align 8
  %14 = sub nsw i64 %12, %13
  %15 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @config, i32 0, i32 0), align 8
  %16 = icmp slt i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %19

18:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %18, %17
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i64 @rdtsc(...) #1

declare dso_local i32 @maccess(i8*) #1

declare dso_local i32 @flush(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
